--- a/templates/register.html
+++ b/templates/register.html
@@ -70,7 +70,7 @@
 
                 <div class="mt-6 text-sm text-gray-700">
                     Already have an account?
-                    <a href="{{ url_for('login') }}" class="font-semibold text-gray-900 underline underline-offset-4">Log in</a>
+                    <a href="{{ url_for('auth.login') }}" class="font-semibold text-gray-900 underline underline-offset-4">Log in</a>
                 </div>
             </div>
         </div>
