--- a/templates/verify_email.html
+++ b/templates/verify_email.html
@@ -56,7 +56,7 @@
                     </button>
                 </form>
 
-                <p class="mt-6 text-xs text-gray-500">Logged in as {{ name }}. If this isn’t you, <a href="{{ url_for('register') }}" class="font-semibold underline">create a new account</a>.</p>
+                <p class="mt-6 text-xs text-gray-500">Logged in as {{ name }}. If this isn’t you, <a href="{{ url_for('auth.register') }}" class="font-semibold underline">create a new account</a>.</p>
             </div>
         </div>
     </main>
